--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,16 +15,30 @@ jobs:
         sudo apt update
         sudo apt install -y python3-pip python3-setuptools python3-dev build-essential \
           libssl-dev libffi-dev libsqlite3-dev zlib1g-dev libjpeg-dev libfreetype6-dev \
-          libpng-dev libblas-dev liblapack-dev git unzip openjdk-11-jdk
+          libpng-dev libblas-dev liblapack-dev git unzip openjdk-11-jdk wget
         pip install buildozer cython
+
+        # Instalar Android SDK command-line tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -O cmdline-tools.zip
+        mkdir -p $HOME/android-sdk/cmdline-tools
+        unzip cmdline-tools.zip -d $HOME/android-sdk/cmdline-tools
+        export ANDROID_HOME=$HOME/android-sdk
+        export PATH=$ANDROID_HOME/cmdline-tools/bin:$PATH
+
+        # Aceptar licencias automáticamente
         yes | sdkmanager --licenses
+
+        # Instalar plataformas y build-tools necesarios
+        sdkmanager "platform-tools" "platforms;android-31" "build-tools;31.0.0"
 
     - name: Build APK
       run: |
+        export ANDROID_HOME=$HOME/android-sdk
+        export PATH=$ANDROID_HOME/cmdline-tools/bin:$PATH
         buildozer android debug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: TuJuegoAPK
+        name: CruzRayaAPK
         path: bin/*.apk
