--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,23 +18,27 @@ jobs:
           libpng-dev libblas-dev liblapack-dev git unzip openjdk-11-jdk wget
         pip install buildozer cython
 
-        # Instalar Android SDK command-line tools
+        # Descargar Android SDK command-line tools
         wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -O cmdline-tools.zip
         mkdir -p $HOME/android-sdk/cmdline-tools
         unzip cmdline-tools.zip -d $HOME/android-sdk/cmdline-tools
+
+        # Mover carpeta a "latest" (Buildozer lo espera ahí)
+        mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
+
         export ANDROID_HOME=$HOME/android-sdk
-        export PATH=$ANDROID_HOME/cmdline-tools/bin:$PATH
+        export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH
 
         # Aceptar licencias automáticamente
-        yes | sdkmanager --licenses
+        yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
 
         # Instalar plataformas y build-tools necesarios
-        sdkmanager "platform-tools" "platforms;android-31" "build-tools;31.0.0"
+        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-31" "build-tools;31.0.0"
 
     - name: Build APK
       run: |
         export ANDROID_HOME=$HOME/android-sdk
-        export PATH=$ANDROID_HOME/cmdline-tools/bin:$PATH
+        export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH
         buildozer android debug
 
     - name: Upload APK
